# p64tool

./: .gitignore  CHANGES.md  Cargo.toml  Cross.toml  DESIGN.md  LICENSE  PROTOCOL.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: tui-design-notes.md
docs/superpowers/plans/: 2026-07-16-version-gating.md
docs/superpowers/specs/: 2026-07-16-version-gating-design.md
src/: codeplug.rs  config.rs  identity.rs  main.rs  proto.rs  regs.rs  serial.rs
